@@ -1,3 +1,7 @@
+2006-11-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ibridge.tcl: Fix ircbridge nicks.
+
 2006-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Added auto-op and kick support. Also whois.
